--- a/index.html
+++ b/index.html
@@ -1,1 +1,3 @@
-Hello World
+## I'm Ulas! Welcome to my personal website
+
+Though there's not much stuff here (nothing tbh), soon this place will be shining!
